# hilum-local-llm-engine

./: CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: build.yml
common/: CMakeLists.txt
common/jinja/: README.md  string.cpp  value.h
ggml/include/: gguf.h
ggml/src/: ggml-impl.h  gguf.cpp
ggml/src/ggml-cpu/: CMakeLists.txt
ggml/src/ggml-cpu/llamafile/: sgemm.cpp
ggml/src/ggml-vulkan/: CMakeLists.txt  ggml-vulkan.cpp
ggml/src/ggml-vulkan/cmake/: host-toolchain.cmake.in
ggml/src/ggml-vulkan/vulkan-shaders/: CMakeLists.txt  dequant_funcs.glsl  mul_mat_vec_q4_k.comp  mul_mat_vec_q6_k.comp  mul_mm_funcs.glsl  vulkan-shaders-gen.cpp
hilum/: CMakeLists.txt  hilum_llm.cpp  hilum_llm.h
include/: llama.h
scripts/: tune_device.py
src/: llama-mmap.cpp  llama-mmap.h  llama-model-loader.cpp  llama-model-loader.h  llama.cpp
tests/: CMakeLists.txt  test-hilum-api.cpp  test-hilum-runtime.cpp
tools/mtmd/: CMakeLists.txt
